--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -45,7 +45,7 @@ h6 {
 }
 
 .hdr--small {
-  font-size: modular-scale(1);
+  font-size: modular-scale(0);
 }
 
 p {
